Superset Admin config + Dashboards

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -173,11 +173,12 @@ services:
       - DATABASE_PORT=${DATABASE_PORT}
       - CH_DATABASE=${CH_DATABASE}
       - CH_USER=${CH_USER}
+      - SUPERSET_USER=${SUPERSET_USER}
       - CH_PASSWORD=${CH_PASSWORD}
       - SUPERSET_ADMIN_FIRSTNAME=${SUPERSET_ADMIN_FIRSTNAME}
       - SUPERSET_ADMIN_LASTNAME=${SUPERSET_ADMIN_LASTNAME}
       - SUPERSET_ADMIN_EMAIL=${SUPERSET_ADMIN_EMAIL}
-      - SUPERSET_ADMIN_PASSWORD=${SUPERSET_ADMIN_PASSWORD}
+      - SUPERSET_PASS=${SUPERSET_PASS}
     ports:
       - "8088:8088"
     depends_on:
